alignment fix

--- a/style.css
+++ b/style.css
@@ -248,6 +248,7 @@ html, body {
 .input {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-size: 1.2rem;
     gap: 1rem;
 }
